<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/home"
        android:icon="@drawable/home"
        android:id="@+id/main"
        android:visible="true" />

    <item android:title="@string/catalog"
        android:icon="@drawable/catalog"
        android:id="@+id/catalog"
        android:visible="true"/>

    <item android:title="@string/cart"
        android:icon="@drawable/cart"
        android:id="@+id/cart"
        android:visible="true"/>

    <item android:title="@string/favorites"
        android:icon="@drawable/favorites"
        android:id="@+id/favorites"
        android:visible="true"/>

    <item android:title="@string/cabinet"
        android:icon="@drawable/user"
        android:id="@+id/cabinet"
        android:visible="true"/>

</menu>