<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:paddingBottom="16dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rootElement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        tools:context=".RegistrationActivity">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="155dp"
            android:layout_height="113dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.021"
            app:srcCompat="@drawable/logo"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/Register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.027" />

        <EditText
            android:id="@+id/inputPhone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/input_bg"
            android:drawableStart="@drawable/smartphone"
            android:drawablePadding="10dp"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:hint="@string/telephone"
            android:inputType="phone"
            android:minHeight="48dp"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Register"
            android:autofillHints=""
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/inputName"
            android:layout_width="158dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/input_bg"
            android:drawableStart="@drawable/person"
            android:drawablePadding="10dp"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/inputPhone"
            app:layout_constraintTop_toBottomOf="@+id/inputPhone"
            android:autofillHints="" />

        <EditText
            android:id="@+id/inputSurname"
            android:layout_width="178dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/input_bg"
            android:drawableStart="@drawable/person"
            android:drawablePadding="10dp"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:hint="@string/surname"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/inputPhone"
            app:layout_constraintStart_toEndOf="@+id/inputName"
            app:layout_constraintTop_toBottomOf="@+id/inputPhone"
            android:autofillHints="" />

        <EditText
            android:id="@+id/inputOtchestvo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/input_bg"
            android:drawableStart="@drawable/person"
            android:drawablePadding="10dp"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:hint="@string/otchestvo"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/inputPhone"
            app:layout_constraintStart_toStartOf="@+id/inputPhone"
            app:layout_constraintTop_toBottomOf="@+id/inputSurname"
            android:autofillHints=""
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/input_bg"
            android:drawableStart="@drawable/email2"
            android:drawablePadding="10dp"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:hint="@string/mail"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/inputOtchestvo"
            app:layout_constraintStart_toStartOf="@+id/inputOtchestvo"
            app:layout_constraintTop_toBottomOf="@+id/inputOtchestvo"
            android:autofillHints=""
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/input_bg"
            android:drawableStart="@drawable/key"
            android:drawablePadding="10dp"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:hint="@string/pass6symobls"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/inputEmail"
            app:layout_constraintStart_toStartOf="@+id/inputEmail"
            app:layout_constraintTop_toBottomOf="@+id/inputEmail"
            android:autofillHints=""
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/inputPassword2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/input_bg"
            android:drawableStart="@drawable/key"
            android:drawablePadding="10dp"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:hint="@string/retrypass"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/inputPassword"
            app:layout_constraintStart_toStartOf="@+id/inputPassword"
            app:layout_constraintTop_toBottomOf="@+id/inputPassword"
            android:autofillHints=""
            tools:ignore="VisualLintTextFieldSize" />

        <Button
            android:id="@+id/btnReg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/btn_bg"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/registration"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/inputPassword2"
            app:layout_constraintStart_toStartOf="@+id/inputPassword2"
            app:layout_constraintTop_toBottomOf="@+id/inputPassword2"
            tools:ignore="DuplicateSpeakableTextCheck,VisualLintButtonSize" />


        <TextView
            android:id="@+id/noAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-3dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/noneedinacc"
            android:textColor="#EF6C00"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
            app:layout_constraintStart_toStartOf="@+id/linearLayout2"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/btnReg"
            app:layout_constraintStart_toStartOf="@+id/btnReg"
            app:layout_constraintTop_toBottomOf="@+id/btnReg">

            <TextView
                android:id="@+id/alreadyHaveAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:paddingEnd="3dp"
                android:text="@string/alreadyRegistered"
                android:textColor="@color/black"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/loginActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/join"
                android:textColor="@color/blue" />

        </LinearLayout>

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/back"
            android:contentDescription="@string/todo"
            tools:ignore="ContentDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>